// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kitchen sink privs-and-defaults-1.sql 1`] = `
{
  "stmt": {
    "AlterDefaultPrivilegesStmt": {
      "action": {
        "behavior": "DROP_RESTRICT",
        "grantees": [
          {
            "RoleSpec": {
              "location": 73,
              "rolename": "your_user",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        ],
        "is_grant": true,
        "objtype": "OBJECT_TABLE",
        "privileges": [
          {
            "AccessPriv": {
              "priv_name": "select",
            },
          },
        ],
        "targtype": "ACL_TARGET_DEFAULTS",
      },
      "options": [
        {
          "DefElem": {
            "arg": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "schema_name",
                    },
                  },
                ],
              },
            },
            "defaction": "DEFELEM_UNSPEC",
            "defname": "schemas",
            "location": 25,
          },
        },
      ],
    },
  },
}
`;

exports[`kitchen sink privs-and-defaults-1.sql 2`] = `"ALTER DEFAULT PRIVILEGES IN SCHEMA schema_name GRANT SELECT ON TABLES TO your_user"`;

exports[`kitchen sink privs-and-defaults-2.sql 1`] = `
{
  "stmt": {
    "AlterDefaultPrivilegesStmt": {
      "action": {
        "behavior": "DROP_RESTRICT",
        "grantees": [
          {
            "RoleSpec": {
              "location": 70,
              "rolename": "your_user",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        ],
        "is_grant": true,
        "objtype": "OBJECT_TABLE",
        "targtype": "ACL_TARGET_DEFAULTS",
      },
      "options": [
        {
          "DefElem": {
            "arg": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "schema_name",
                    },
                  },
                ],
              },
            },
            "defaction": "DEFELEM_UNSPEC",
            "defname": "schemas",
            "location": 25,
          },
        },
      ],
    },
  },
}
`;

exports[`kitchen sink privs-and-defaults-2.sql 2`] = `"ALTER DEFAULT PRIVILEGES IN SCHEMA schema_name GRANT ALL PRIVILEGES ON TABLES TO your_user"`;

exports[`kitchen sink privs-and-defaults-3.sql 1`] = `
{
  "stmt": {
    "AlterDefaultPrivilegesStmt": {
      "action": {
        "behavior": "DROP_RESTRICT",
        "grantees": [
          {
            "RoleSpec": {
              "location": 73,
              "rolename": "your_user",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        ],
        "is_grant": true,
        "objtype": "OBJECT_SEQUENCE",
        "targtype": "ACL_TARGET_DEFAULTS",
      },
      "options": [
        {
          "DefElem": {
            "arg": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "schema_name",
                    },
                  },
                ],
              },
            },
            "defaction": "DEFELEM_UNSPEC",
            "defname": "schemas",
            "location": 25,
          },
        },
      ],
    },
  },
}
`;

exports[`kitchen sink privs-and-defaults-3.sql 2`] = `"ALTER DEFAULT PRIVILEGES IN SCHEMA schema_name GRANT ALL PRIVILEGES ON SEQUENCES TO your_user"`;

exports[`kitchen sink privs-and-defaults-4.sql 1`] = `
{
  "stmt": {
    "AlterDefaultPrivilegesStmt": {
      "action": {
        "behavior": "DROP_RESTRICT",
        "grantees": [
          {
            "RoleSpec": {
              "location": 73,
              "rolename": "your_user",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        ],
        "is_grant": true,
        "objtype": "OBJECT_FUNCTION",
        "targtype": "ACL_TARGET_DEFAULTS",
      },
      "options": [
        {
          "DefElem": {
            "arg": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "schema_name",
                    },
                  },
                ],
              },
            },
            "defaction": "DEFELEM_UNSPEC",
            "defname": "schemas",
            "location": 25,
          },
        },
      ],
    },
  },
}
`;

exports[`kitchen sink privs-and-defaults-4.sql 2`] = `"ALTER DEFAULT PRIVILEGES IN SCHEMA schema_name GRANT ALL PRIVILEGES ON FUNCTIONS TO your_user"`;
